alterações de arquivos

--- a/music.html
+++ b/music.html
@@ -152,7 +152,7 @@
                         </div>
                         <img src="media/playlist.png" alt="">
                         <h2>Lorem</h2>
-                        <p>Lorem ipsum, dol.or sit amet consectetur adipisicing elit. Voluptate?</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate?</p>
                     </div>
                     <div class="playlist__card">
                         <div class="play">
