update all pages insert best design function

--- a/playlist.html
+++ b/playlist.html
@@ -14,16 +14,16 @@
     <!--====================== HEADER ===========================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="" class="nav__logo">
+            <a href="home.html" class="nav__logo">
                 <img src="media/dial-logo.png" alt="">
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="music.html" class="nav__link">Músicas</a>
+                        <a href="music1.html" class="nav__link">Músicas</a>
                     </li>
                     <li class="nav__item">
-                        <a href="" class="nav__link">Notícias</a>
+                        <a href="home.html" class="nav__link">Notícias</a>
                     </li>
                 </ul>
                 <div class="nav__close" id="nav-close">
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="nav__user-actions">
-                <a class="user" href="Login-Register.html">
+                <a class="user" href="user-page.html">
                     <i class="fa-regular fa-user"></i>
                 </a>
                 <button class="nav__button">Logout</button>
