--- a/music1.html
+++ b/music1.html
@@ -20,7 +20,7 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="music.html" class="nav__link">Músicas</a>
+                        <a href="music1.html" class="nav__link">Músicas</a>
                     </li>
                     <li class="nav__item">
                         <a href="" class="nav__link">Notícias</a>
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="nav__user-actions">
-                <a class="user" href="Login-Register.html">
+                <a class="user" href="user-page.html">
                     <i class="fa-regular fa-user"></i>
                 </a>
                 <button class="nav__button">Logout</button>
@@ -70,7 +70,9 @@
                         <div class="slider__wrapper">
                             <div class="playlist__card">
                                 <div class="info">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -86,7 +88,9 @@
                             </div>
                             <div class="playlist__card">
                                 <div class="info">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -94,7 +98,9 @@
                             </div>
                             <div class="playlist__card">
                                 <div class="info">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -102,7 +108,9 @@
                             </div>
                             <div class="playlist__card">
                                 <div class="info">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -110,7 +118,9 @@
                             </div>
                             <div class="playlist__card">
                                 <div class="info">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -118,7 +128,9 @@
                             </div>
                             <div class="playlist__card">
                                 <div class="info">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -126,7 +138,9 @@
                             </div>
                             <div class="playlist__card">
                                 <div class="info">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -134,7 +148,9 @@
                             </div>
                             <div class="playlist__card">
                                 <div class="info">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -142,7 +158,9 @@
                             </div>
                             <div class="playlist__card">
                                 <div class="info">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -150,7 +168,9 @@
                             </div>
                             <div class="playlist__card">
                                 <div class="info">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -158,7 +178,9 @@
                             </div>
                             <div class="playlist__card">
                                 <div class="info">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -204,7 +226,9 @@
                             </div>
                             <div class="playlist__card2">
                                 <div class="info2">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -212,7 +236,9 @@
                             </div>
                             <div class="playlist__card2">
                                 <div class="info2">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -220,7 +246,9 @@
                             </div>
                             <div class="playlist__card2">
                                 <div class="info2">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -228,7 +256,9 @@
                             </div>
                             <div class="playlist__card2">
                                 <div class="info2">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -236,7 +266,9 @@
                             </div>
                             <div class="playlist__card2">
                                 <div class="info2">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -244,7 +276,9 @@
                             </div>
                             <div class="playlist__card2">
                                 <div class="info2">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -252,7 +286,9 @@
                             </div>
                             <div class="playlist__card2">
                                 <div class="info2">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -260,7 +296,9 @@
                             </div>
                             <div class="playlist__card2">
                                 <div class="info2">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -268,7 +306,9 @@
                             </div>
                             <div class="playlist__card2">
                                 <div class="info2">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -276,7 +316,9 @@
                             </div>
                             <div class="playlist__card2">
                                 <div class="info2">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
@@ -284,7 +326,9 @@
                             </div>
                             <div class="playlist__card2">
                                 <div class="info2">
-                                    <i class="fa-solid fa-circle-info"></i>
+                                    <a href="playlist.html">
+                                        <i class="fa-solid fa-circle-info"></i>
+                                    </a>
                                 </div>
                                 <img src="media/playlist.png" draggable="false" alt="">
                                 <h2>Nome da música</h2>
