--- a/user-page.html
+++ b/user-page.html
@@ -14,16 +14,16 @@
     <!--====================== HEADER ===========================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="" class="nav__logo">
+            <a href="home.html" class="nav__logo">
                 <img src="media/dial-logo.png" alt="">
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="music.html" class="nav__link">Músicas</a>
+                        <a href="music1.html" class="nav__link">Músicas</a>
                     </li>
                     <li class="nav__item">
-                        <a href="" class="nav__link">Notícias</a>
+                        <a href="home.html" class="nav__link">Notícias</a>
                     </li>
                 </ul>
                 <div class="nav__close" id="nav-close">
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="nav__user-actions">
-                <a class="user" href="Login-Register.html">
+                <a class="user" href="user-page.html">
                     <i class="fa-regular fa-user"></i>
                 </a>
                 <button class="nav__button">Logout</button>
@@ -51,7 +51,8 @@
                             <img src="media/user.png" alt="">
                             <h2 class="perfil__info">User Name</h2>
                         </div>
-                        <img class="heart__icon" src="media/heart.svg" alt="">
+                        <svg class="heart__icon" xmlns="http://www.w3.org/2000/svg" fill="#FF1467" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M225.8 468.2l-2.5-2.3L48.1 303.2C17.4 274.7 0 234.7 0 192.8v-3.3c0-70.4 50-130.8 119.2-144C158.6 37.9 198.9 47 231 69.6c9 6.4 17.4 13.8 25 22.3c4.2-4.8 8.7-9.2 13.5-13.3c3.7-3.2 7.5-6.2 11.5-9c0 0 0 0 0 0C313.1 47 353.4 37.9 392.8 45.4C462 58.6 512 119.1 512 189.5v3.3c0 41.9-17.4 81.9-48.1 110.4L288.7 465.9l-2.5 2.3c-8.2 7.6-19 11.9-30.2 11.9s-22-4.2-30.2-11.9zM239.1 145c-.4-.3-.7-.7-1-1.1l-17.8-20c0 0-.1-.1-.1-.1c0 0 0 0 0 0c-23.1-25.9-58-37.7-92-31.2C81.6 101.5 48 142.1 48 189.5v3.3c0 28.5 11.9 55.8 32.8 75.2L256 430.7 431.2 268c20.9-19.4 32.8-46.7 32.8-75.2v-3.3c0-47.3-33.6-88-80.1-96.9c-34-6.5-69 5.4-92 31.2c0 0 0 0-.1 .1s0 0-.1 .1l-17.8 20c-.3 .4-.7 .7-1 1.1c-4.5 4.5-10.6 7-16.9 7s-12.4-2.5-16.9-7z"/></svg>
+                        <!--<img class="heart__icon" src="media/heart.svg" alt="">-->
                     </div>
                 </div>
                 <div class="playlist">
@@ -69,8 +70,10 @@
                                         <img src="media/playlist.png" alt="">
                                     </div>
                                     <div class="info__list">
-                                        <h3>Nome Playlist</h3>
-                                        <p>12 músicas</p>
+                                        <a href="playlist.html">
+                                            <h3>Nome Playlist</h3>
+                                            <p>12 músicas</p>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="list__container">
@@ -81,8 +84,10 @@
                                         <img src="media/playlist.png" alt="">
                                     </div>
                                     <div class="info__list">
-                                        <h3>Nome Playlist</h3>
-                                        <p>12 músicas</p>
+                                        <a href="playlist.html">
+                                            <h3>Nome Playlist</h3>
+                                            <p>12 músicas</p>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="list__container">
@@ -93,8 +98,10 @@
                                         <img src="media/playlist.png" alt="">
                                     </div>
                                     <div class="info__list">
-                                        <h3>Nome Playlist</h3>
-                                        <p>12 músicas</p>
+                                        <a href="playlist.html">
+                                            <h3>Nome Playlist</h3>
+                                            <p>12 músicas</p>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="list__container">
@@ -105,8 +112,10 @@
                                         <img src="media/playlist.png" alt="">
                                     </div>
                                     <div class="info__list">
-                                        <h3>Nome Playlist</h3>
-                                        <p>12 músicas</p>
+                                        <a href="playlist.html">
+                                            <h3>Nome Playlist</h3>
+                                            <p>12 músicas</p>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="list__container">
@@ -117,8 +126,10 @@
                                         <img src="media/playlist.png" alt="">
                                     </div>
                                     <div class="info__list">
-                                        <h3>Nome Playlist</h3>
-                                        <p>12 músicas</p>
+                                        <a href="playlist.html">
+                                            <h3>Nome Playlist</h3>
+                                            <p>12 músicas</p>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
