--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             <div class="form__card">
                 <header class="form__header">
                     <a href="home.html" id="logo__link">
-                        <img src="media/dial-logo.svg" id="logo" alt="">
+                        <img src="media/dial-logo.png" id="logo" alt="">
                     </a>
                     <h1>Fazer Login</h1>
                     <p>
