--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="music1.html" class="nav__link">Músicas</a>
+                        <a href="login.html" onclick="alert('FAÇA SEU LOGIN/CADASTRO PRIMEIRAMENTE PARA TER ACESSO')" class="nav__link">Músicas</a>
                     </li>
                     <li class="nav__item">
                         <a href="#carrousel" class="nav__link">Notícias</a>
