--- a/music1.html
+++ b/music1.html
@@ -14,7 +14,7 @@
     <!--====================== HEADER ===========================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="" class="nav__logo">
+            <a href="home.html" class="nav__logo">
                 <img src="media/dial-logo.png" alt="">
             </a>
             <div class="nav__menu" id="nav-menu">
@@ -23,7 +23,7 @@
                         <a href="music1.html" class="nav__link">Músicas</a>
                     </li>
                     <li class="nav__item">
-                        <a href="" class="nav__link">Notícias</a>
+                        <a href="home.html" class="nav__link">Notícias</a>
                     </li>
                 </ul>
                 <div class="nav__close" id="nav-close">
